# Clip

./: Cargo.toml  Dockerfile  docker-compose.yml  render.yaml
src/: api.rs  cache.rs  main.rs  model.rs  shortener.rs  store.rs
static/: index.html
